Fixed pdfcanvas margin where top bar covered pdf, created minimize function for top bar, added temporary favicon

--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,13 @@
 #top-bar {
     position: fixed;
     width: 100%;
-    height: 2.8em;
+    height: 45px;
     background-color: var(--lt1);
     border: 1px solid var(--d2);
-    border-radius: 0em 0em 0.5em 0.5em;
+    border-radius: 0 0 5px 5px;
     text-align: center;
+    margin-top: 0;
+    transition: 0.5s;
 }
 
 .btn {
@@ -60,6 +62,11 @@
     display: none;
 }
 
+#page-info {
+    display: inline-block;
+}
+
+
 /* ------------------------------------ CANVAS ------------------------------ */
 #canvasContainer {
     width: auto;
@@ -69,6 +76,11 @@
     text-align: center;
     border: solid 2px;
     border-radius: 5px;
+}
+
+#pdfCanvas {
+    margin: 45px 0 0 0;
+    transition: 0.5s;
 }
 
 .error {
@@ -83,7 +95,7 @@
 #side-bar {
     z-index: 2;
     position: fixed;
-    height: 100%;
+    height: 93.5%;
     width: 0;
     top: 0;
     right: 0;
@@ -91,6 +103,8 @@
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
+    border: none;
+    border-radius: 10px 0 0 10px;
 }
 
 #close-button {
@@ -116,12 +130,12 @@
     width: 85%;
     margin: 0 auto;
     font-size: 1.1em;
- background-color: var(--d2);
- color: var(--lt2);
- border: 1px solid var(--lt2);
- border-radius: 5px;
- display: grid;
- grid-template-columns: 30% 20% 20% 30%;
+    background-color: var(--d2);
+    color: var(--lt2);
+    border: 1px solid var(--lt2);
+    border-radius: 5px;
+    display: grid;
+    grid-template-columns: 30% 20% 20% 30%;
 }
 
 .dice-btn {
